hide collage for mobile;

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
-<gt-container [hasWallpaper]="true">
+<gt-container [hasWallpaper]="true" backgroundImage="assets/bg-blog.jpg">
     <div id="inner-content" fxLayout="column" fxLayoutAlign="top center" fxLayoutGap="20px">
         <iu-accordion class="mat-card blog-entry" [opened]="false">
             <div class="accordion-trigger">
