--- a/src/app/shared/container/container.component.html
+++ b/src/app/shared/container/container.component.html
@@ -1,4 +1,4 @@
-<gt-header [windowWidth]="contentWidth" [offsetLeft]="offsetLeft"></gt-header>
+<gt-header [windowWidth]="contentWidth" [offsetLeft]="offsetLeft" [mobile]="mobile"></gt-header>
 <!-- <gt-navbar></gt-navbar> -->
 <gt-sidenav *ngIf="!mobile" [style.height.px]="sidenavHeight"></gt-sidenav>
 
