--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<gt-container [hasWallpaper]="true">
+<gt-container [hasWallpaper]="true" backgroundImage="assets/blog-1.jpg">
   <div id="inner-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
     <div class="intro-lead-in font-effect-emboss">"Growing Confidence in Communication!"</div>
     <div class="intro-heading font-effect-3d-float">Welcome!</div>
