client in-take form;

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,5 +2,9 @@
     <div id="inner-content">
         <gt-email></gt-email>
         <gt-address></gt-address>
+        <a mat-stroked-button class="pdf-link" href="/assets/pdf/Client_Intake_Fall_2018.pdf" target="_blank">
+            <mat-icon>picture_as_pdf</mat-icon>
+            <span class="label">New Client In-Take Form</span>
+        </a>
     </div>
 </gt-container>
