remove min-width styles;

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,28 +37,6 @@ header .intro-text .intro-heading {
     margin-bottom: 25px;
 }
 
-@media (min-width: 768px) {
-    header .intro-text {
-        padding-top: 300px;
-        padding-bottom: 200px;
-    }
-    header .intro-text .intro-lead-in {
-        font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        font-style: italic;
-        font-size: 40px;
-        line-height: 40px;
-        margin-bottom: 25px;
-    }
-    header .intro-text .intro-heading {
-        font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 75px;
-        line-height: 75px;
-        margin-bottom: 50px;
-    }
-}
-
 body {
     overflow: hidden;
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -285,29 +263,6 @@ fieldset[disabled] .btn-xl.active {
     background-color: #63c900;
 }
 
-@media (min-width: 768px) {
-    .navbar-default {
-        background-color: transparent;
-        padding: 25px 0;
-        transition: padding 0.3s;
-        border: none;
-    }
-    .navbar-default .navbar-brand {
-        font-size: 2em;
-        transition: all 0.3s;
-    }
-    .navbar-default .navbar-nav>.active>a {
-        border-radius: 3px;
-    }
-    .navbar-default.navbar-shrink {
-        background-color: #222;
-        padding: 10px 0;
-    }
-    .navbar-default.navbar-shrink .navbar-brand {
-        font-size: 1.5em;
-    }
-}
-
 section {
     padding: 30px 0 !important;
 }
@@ -325,12 +280,6 @@ section h3.section-subheading {
     font-style: italic;
     font-weight: 400;
     margin-bottom: 75px;
-}
-
-@media (min-width: 768px) {
-    section {
-        padding: 150px 0;
-    }
 }
 
 .service-heading {
@@ -407,12 +356,6 @@ section h3.section-subheading {
 
 #resources * {
     z-index: 2;
-}
-
-@media (min-width: 767px) {
-    #resources .portfolio-item {
-        margin: 0 0 30px;
-    }
 }
 
 .timeline {
@@ -526,80 +469,6 @@ section h3.section-subheading {
 .timeline .timeline-body>p,
 .timeline .timeline-body>ul {
     margin-bottom: 0;
-}
-
-@media (min-width: 768px) {
-    .timeline:before {
-        left: 50%;
-    }
-    .timeline>li {
-        margin-bottom: 100px;
-        min-height: 100px;
-    }
-    .timeline>li .timeline-panel {
-        width: 41%;
-        float: left;
-        padding: 0 20px 20px 30px;
-        text-align: right;
-    }
-    .timeline>li .timeline-image {
-        width: 100px;
-        height: 100px;
-        left: 50%;
-        margin-left: -50px;
-    }
-    .timeline>li .timeline-image h4 {
-        font-size: 13px;
-        margin-top: 16px;
-        line-height: 18px;
-    }
-    .timeline>li.timeline-inverted>.timeline-panel {
-        float: right;
-        text-align: left;
-        padding: 0 30px 20px 20px;
-    }
-}
-
-@media (min-width: 992px) {
-    .timeline>li {
-        min-height: 150px;
-    }
-    .timeline>li .timeline-panel {
-        padding: 0 20px 20px;
-    }
-    .timeline>li .timeline-image {
-        width: 150px;
-        height: 150px;
-        margin-left: -75px;
-    }
-    .timeline>li .timeline-image h4 {
-        font-size: 18px;
-        margin-top: 30px;
-        line-height: 26px;
-    }
-    .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 20px 20px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .timeline>li {
-        min-height: 170px;
-    }
-    .timeline>li .timeline-panel {
-        padding: 0 20px 20px 100px;
-    }
-    .timeline>li .timeline-image {
-        width: 170px;
-        height: 170px;
-        margin-left: -85px;
-    }
-    .timeline>li .timeline-image h4 {
-        margin-top: 40px;
-    }
-    .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 100px 20px 20px;
-    }
 }
 
 .team-member {
@@ -862,8 +731,7 @@ body {
 #inner-content {
     height: 100%;
     width: 94%;
-    min-height: 600px;
-    min-width: 1000px;
+    min-height: 600px; // min-width: 1000px;
     position: absolute;
     padding: 30px 3%;
 }
