--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,7 +5,7 @@
   height: 100%;
   width: 100%;
   min-height: 600px;
-  min-width: 800px;
+  // min-width: 800px;
   position: absolute;
   z-index: 2;
 
