--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -12,7 +12,7 @@
     position: relative;
     margin-top: 60px;
     height: 70px;
-    min-width: 1000px;
+    // min-width: 1000px;
     padding-left: 160px;
     .summer-league-logo {
         position: absolute;
