make contact page responsive;

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,18 +1,18 @@
 gt-email {
-    position: absolute;
-    left: 460px;
+    // position: absolute;
+    // left: 460px;
 }
 
 gt-address {
-    position: absolute;
-    top: 160px;
-    left: 100px;
+    // position: absolute;
+    // top: 160px;
+    // left: 100px;
 }
 
 .pdf-link.mat-stroked-button {
-    position: absolute;
-    bottom: 160px;
-    left: 520px;
+    // position: absolute;
+    // bottom: 160px;
+    // left: 520px;
     border-color: #000;
     color: #000;
     padding: 10px;
