--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <gt-container [hasWallpaper]="false" [showHelp]="false" backgroundImage="assets/bg-contact.jpg">
-    <div id="inner-content">
+    <div id="inner-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
         <gt-email></gt-email>
         <gt-address></gt-address>
         <a mat-stroked-button class="pdf-link" href="/assets/pdf/Client_Intake_Fall_2018.pdf" target="_blank">
