--- a/src/app/shared/address/address.component.html
+++ b/src/app/shared/address/address.component.html
@@ -6,8 +6,12 @@
   <a mat-button target="_blank" href="https://wego.here.com/directions/mix//Grow-Tell,-LLC-Speech-Language-Pathology-Services,-804-Belvedere-Street,-17013-Carlisle:e-eyJuYW1lIjoiR3JvdyAmIFRlbGwsIExMQyBTcGVlY2gtTGFuZ3VhZ2UgUGF0aG9sb2d5IFNlcnZpY2VzIiwiYWRkcmVzcyI6IjgwNCBCZWx2ZWRlcmUgU3RyZWV0LCBDYXJsaXNsZSwgUGVubnN5bHZhbmlhIiwibGF0aXR1ZGUiOjQwLjE4ODIyLCJsb25naXR1ZGUiOi03Ny4yMDQ3NSwicHJvdmlkZXJOYW1lIjoiZmFjZWJvb2siLCJwcm92aWRlcklkIjoxMzkxNDA4NDMxMTc1MDk2fQ==?map=40.18822,-77.20475,15,normal&fb_locale=en_US">
     <mat-icon>directions</mat-icon>Get Directions
   </a>
-  <p class="phone">
+  <p class="row">
     <mat-icon>phone</mat-icon>
-    <span class="phone-number">(717) 512-2841</span>
+    <span class="row-detail">(717) 512-2841</span>
+  </p>
+  <p class="row">
+    <mat-icon>email</mat-icon>
+    <span class="row-detail">grow.tell.slp@gmail.com</span>
   </p>
 </mat-card>
