--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar id="header" color="primary" class="mat-elevation-z6" [style.width.px]="windowWidth" [style.left.px]="offsetLeft">
-    <a class="navbar-brand page-scroll" routerLink="/">Grow &amp; Tell SLP, LLC</a>
+    <a *ngIf="mobile" class="navbar-brand page-scroll" routerLink="/">
+        <img class="logo" src="assets/logo.png">
+    </a>
+    <a *ngIf="!mobile" class="navbar-brand page-scroll" routerLink="/">Grow &amp; Tell SLP, LLC</a>
     <p *ngIf="!mobile" class="slp-lbl font-effect-emboss">Speech &amp; Language Pathology</p>
     <!-- <div class="intro-lead-in font-effect-emboss">"Growing Confidence in Communication!"</div> -->
     <div id="header-links">
