--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -2,8 +2,7 @@
 @import '../../../common';
 #header {
     @include black-gradient();
-    min-height: 64px;
-    // min-width: 680px;
+    min-height: 64px; // min-width: 680px;
     box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
     position: fixed;
     top: 0;
@@ -17,6 +16,10 @@
         float: left;
         font-size: 24px;
         margin-right: 20px;
+        img {
+            height: 48px;
+            margin: 8px 20px;
+        }
     }
     .slp-lbl {
         font-family: 'Roboto', sans-serif;
