--- a/src/app/shared/team-member/team-member.component.scss
+++ b/src/app/shared/team-member/team-member.component.scss
@@ -29,3 +29,11 @@
         right: 0;
     }
 }
+
+@media screen and (max-width: 1100px) {
+    .team-member {
+        gt-testimonial {
+            display: none;
+        }
+    }
+}
