--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -47,3 +47,24 @@
         margin: 20px 3% 40px 3%;
     }
 }
+
+@media screen and (max-width: 1100px) {
+    #inner-content {
+        .graphic {
+            width: 90%;
+            margin: 40px 0%;
+        }
+        .step,
+        .step:nth-child(2) {
+            padding: 12px 5%;
+            width: 80%;
+            margin: 10px 0%;
+        }
+        .card-list,
+        .card-list.middle {
+            padding: 12px 5%;
+            width: 80%;
+            margin: 10px 0%;
+        }
+    }
+}
