--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -14,6 +14,7 @@
     z-index: 6;
     display: block;
     padding: 10px;
+    min-width: 400px;
     .accordion-trigger {
         width: 100%;
         height: 260px;
@@ -29,7 +30,6 @@
             position: relative;
             float: right;
             width: 50%;
-            min-width: 400px;
             height: 100%;
             .mat-fab {
                 @include mat-elevation(12);
@@ -127,14 +127,25 @@
 
 @media screen and (max-width: 700px) {
     .blog-entry {
+        padding: 2px;
+        border-radius: 2px;
         .accordion-trigger {
             padding-bottom: 20px;
             .right {
                 mat-chip-list {
                     display: none;
                 }
+                h3 {
+                    font-size: 15px;
+                }
+                h4 {
+                    .by {
+                        font-size: 13px;
+                    }
+                }
                 .read-more {
                     bottom: 0px;
+                    font-size: 13px;
                 }
             }
         }
