--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -14,7 +14,8 @@
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
+    display: block !important;
     #inner-content {
         gt-email {
             display: block;
