--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -63,3 +63,12 @@
         background: silver;
     }
 }
+
+@media screen and (max-width: 800px) {
+    #inner-content {
+        display: block !important;
+    }
+    gt-mission {
+        margin-top: 140px;
+    }
+}
