--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,5 @@
-<mat-toolbar id="header" color="primary" class="mat-elevation-z6" [style.width.px]="windowWidth" [style.left.px]="offsetLeft">
+<mat-toolbar [class.mobile]="mobile" id="header" color="primary" class="mat-elevation-z6" [style.width.px]="windowWidth"
+    [style.left.px]="offsetLeft">
     <a *ngIf="mobile" class="navbar-brand page-scroll" routerLink="/">
         <img class="logo" src="assets/logo.png">
     </a>
