add Kristen's info;

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,16 +1,38 @@
 <gt-container [hasWallpaper]="false" backgroundImage="assets/bg-about.jpg">
-
   <div id="inner-content">
-
     <!-- TEAM -->
     <div id="team">
       <h2 class="section-heading font-effect-shadow-multiple">The Grow & Tell Team</h2>
 
-      <gt-team-member [name]="jess.name" [imageSrc]="jess.imageSrc" [title]="jess.title" [description]="jess.description"
-        [facebookHref]="jess.facebookHref" [linkedInHref]="jess.linkedInHref" [testimonials]="jess.testimonials"></gt-team-member>
+      <gt-team-member
+        [name]="jess.name"
+        [imageSrc]="jess.imageSrc"
+        [title]="jess.title"
+        [description]="jess.description"
+        [facebookHref]="jess.facebookHref"
+        [linkedInHref]="jess.linkedInHref"
+        [testimonials]="jess.testimonials"
+      ></gt-team-member>
 
-      <gt-team-member [name]="julie.name" [imageSrc]="julie.imageSrc" [title]="julie.title" [description]="julie.description"
-        [facebookHref]="julie.facebookHref" [linkedInHref]="julie.linkedInHref" [testimonials]="julie.testimonials"></gt-team-member>
+      <gt-team-member
+        [name]="julie.name"
+        [imageSrc]="julie.imageSrc"
+        [title]="julie.title"
+        [description]="julie.description"
+        [facebookHref]="julie.facebookHref"
+        [linkedInHref]="julie.linkedInHref"
+        [testimonials]="julie.testimonials"
+      ></gt-team-member>
+
+      <gt-team-member
+        [name]="kristen.name"
+        [imageSrc]="kristen.imageSrc"
+        [title]="kristen.title"
+        [description]="kristen.description"
+        [facebookHref]="kristen.facebookHref"
+        [linkedInHref]="kristen.linkedInHref"
+        [testimonials]="kristen.testimonials"
+      ></gt-team-member>
 
       <!-- <div class="team-member">
         <img src="assets/ashaweb-71_600.jpg" class="img-responsive img-circle" alt="">
@@ -19,7 +41,6 @@
         <ul class="list-inline social-buttons">
         </ul>
       </div> -->
-
     </div>
     <!-- END TEAM -->
 
@@ -51,7 +72,5 @@
       </div>
     </aside> -->
     <!-- END PARTNERSHIPS -->
-
   </div>
-
 </gt-container>
