OT; whitney; forms;

--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -4,6 +4,10 @@
 
     <h2 class="section-heading font-effect-shadow-multiple">Services</h2>
 
+    <a mat-raised-button class="btn-ot page-scroll btn btn-xl font-effect-outline"
+      routerLink="/services/occupational-therapy">Occupational Therapy
+      Services</a>
+
     <div class="text-center">
 
       <div class="step">
