--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -24,5 +24,9 @@
     <mat-icon>forum</mat-icon>
     <span class="label">Blog</span>
   </a>
+  <a class="link" routerLink="/forms">
+    <mat-icon>attach_file</mat-icon>
+    <span class="label">Forms</span>
+  </a>
   <gt-social-icons></gt-social-icons>
 </nav>
