--- a/src/app/shared/sidenav/sidenav.component.scss
+++ b/src/app/shared/sidenav/sidenav.component.scss
@@ -88,6 +88,10 @@
     top: 640px;
   }
 
+  a.link:nth-child(6) {
+    top: 780px;
+  }
+
   img.logo {
     position: absolute; // bottom: 12px;
     top: 0px;
