--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,35 +4,21 @@
     <div id="team">
       <h2 class="section-heading font-effect-shadow-multiple">The Grow & Tell Team</h2>
 
-      <gt-team-member
-        [name]="jess.name"
-        [imageSrc]="jess.imageSrc"
-        [title]="jess.title"
-        [description]="jess.description"
-        [facebookHref]="jess.facebookHref"
-        [linkedInHref]="jess.linkedInHref"
-        [testimonials]="jess.testimonials"
-      ></gt-team-member>
+      <gt-team-member [name]="jess.name" [imageSrc]="jess.imageSrc" [title]="jess.title"
+        [description]="jess.description" [facebookHref]="jess.facebookHref" [linkedInHref]="jess.linkedInHref"
+        [testimonials]="jess.testimonials"></gt-team-member>
 
-      <gt-team-member
-        [name]="julie.name"
-        [imageSrc]="julie.imageSrc"
-        [title]="julie.title"
-        [description]="julie.description"
-        [facebookHref]="julie.facebookHref"
-        [linkedInHref]="julie.linkedInHref"
-        [testimonials]="julie.testimonials"
-      ></gt-team-member>
+      <gt-team-member [name]="julie.name" [imageSrc]="julie.imageSrc" [title]="julie.title"
+        [description]="julie.description" [facebookHref]="julie.facebookHref" [linkedInHref]="julie.linkedInHref"
+        [testimonials]="julie.testimonials"></gt-team-member>
 
-      <gt-team-member
-        [name]="kristen.name"
-        [imageSrc]="kristen.imageSrc"
-        [title]="kristen.title"
-        [description]="kristen.description"
-        [facebookHref]="kristen.facebookHref"
-        [linkedInHref]="kristen.linkedInHref"
-        [testimonials]="kristen.testimonials"
-      ></gt-team-member>
+      <gt-team-member [name]="kristen.name" [imageSrc]="kristen.imageSrc" [title]="kristen.title"
+        [description]="kristen.description" [facebookHref]="kristen.facebookHref" [linkedInHref]="kristen.linkedInHref"
+        [testimonials]="kristen.testimonials"></gt-team-member>
+
+      <gt-team-member [name]="whitney.name" [imageSrc]="whitney.imageSrc" [title]="whitney.title"
+        [description]="whitney.description" [facebookHref]="whitney.facebookHref" [linkedInHref]="whitney.linkedInHref"
+        [testimonials]="whitney.testimonials"></gt-team-member>
 
       <!-- <div class="team-member">
         <img src="assets/ashaweb-71_600.jpg" class="img-responsive img-circle" alt="">
