--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -1,70 +1,116 @@
 @import '~@angular/material/_theming';
 @import '../../common';
+
 #inner-content {
-    .graphic {
-        @include mat-elevation(4);
-        width: 50%;
-        margin: 40px auto;
-        display: block;
+  position: relative;
+
+  .btn-ot {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+  }
+
+  .btn-xl {
+    color: white;
+    background-color: #7CFC00;
+    border-color: #7CFC00;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    border-radius: 3px;
+    font-size: 18px;
+    padding: 10px 20px;
+  }
+
+  .btn-xl:hover,
+  .btn-xl:focus,
+  .btn-xl:active,
+  .btn-xl.active,
+  .open .dropdown-toggle.btn-xl {
+    color: white;
+    background-color: #63c900;
+    border-color: #5ebf00;
+  }
+
+  .btn-xl:active,
+  .btn-xl.active,
+  .open .dropdown-toggle.btn-xl {
+    background-image: none;
+  }
+
+  .graphic {
+    @include mat-elevation(4);
+    width: 50%;
+    margin: 40px auto;
+    display: block;
+  }
+
+  .step {
+    @include mat-elevation(8);
+    text-align: center;
+    padding: 12px 1.5%;
+    width: 24.5%;
+    margin: 340px 0% 40px 0%;
+    float: left;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+
+    .mat-fab {
+      background-color: $primary-color;
+      color: #fff;
+      font-size: 24px;
     }
-    .step {
-        @include mat-elevation(8);
-        text-align: center;
-        padding: 12px 1.5%;
-        width: 24.5%;
-        margin: 340px 0% 40px 0%;
-        float: left;
-        background: rgba(0, 0, 0, 0.5);
-        color: #fff;
-        .mat-fab {
-            background-color: $primary-color;
-            color: #fff;
-            font-size: 24px;
-        }
-        h4 {
-            color: #fff;
-        }
-        p {
-            color: #fff;
-        }
+
+    h4 {
+      color: #fff;
     }
-    .step:nth-child(2) {
-        width: 36%;
-        margin: 340px 3% 40px 3%;
+
+    p {
+      color: #fff;
     }
-    .card-list {
-        @include mat-elevation(8);
-        text-align: center;
-        padding: 12px 1.5%;
-        width: 24.5%;
-        margin: 10px 0%;
-        float: left;
-        background: rgba(0, 0, 0, 0.5);
-        color: #fff;
-    }
-    .card-list.middle {
-        width: 36%;
-        margin: 20px 3% 40px 3%;
-    }
+  }
+
+  .step:nth-child(2) {
+    width: 36%;
+    margin: 340px 3% 40px 3%;
+  }
+
+  .card-list {
+    @include mat-elevation(8);
+    text-align: center;
+    padding: 12px 1.5%;
+    width: 24.5%;
+    margin: 10px 0%;
+    float: left;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+  }
+
+  .card-list.middle {
+    width: 36%;
+    margin: 20px 3% 40px 3%;
+  }
 }
 
 @media screen and (max-width: 1100px) {
-    #inner-content {
-        .graphic {
-            width: 90%;
-            margin: 40px 0%;
-        }
-        .step,
-        .step:nth-child(2) {
-            padding: 12px 5%;
-            width: 80%;
-            margin: 10px 0%;
-        }
-        .card-list,
-        .card-list.middle {
-            padding: 12px 5%;
-            width: 80%;
-            margin: 10px 0%;
-        }
+  #inner-content {
+    .graphic {
+      width: 90%;
+      margin: 40px 0%;
     }
+
+    .step,
+    .step:nth-child(2) {
+      padding: 12px 5%;
+      width: 80%;
+      margin: 10px 0%;
+    }
+
+    .card-list,
+    .card-list.middle {
+      padding: 12px 5%;
+      width: 80%;
+      margin: 10px 0%;
+    }
+  }
 }
