--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -1,7 +1,12 @@
 <gt-container [hasWallpaper]="false" backgroundImage="assets/blog-1.jpg">
   <div class="wrapper">
-    <h2 class="section-heading font-effect-shadow-multiple">Grow & Tell Forms</h2>
+    <h2 class="section-heading font-effect-shadow-multiple">Documents</h2>
     <a class="doc" target="_blank" href="/assets/pdf/Speech Therapy Client Intake 2020.pdf">Speech Therapy Client Intake
       2020</a>
+    <a class="doc" target="_blank" href="/assets/pdf/HIPAA_Notice of Privacy Practices.pdf">HIPAA Policy</a>
+    <a class="doc" target="_blank" href="/assets/pdf/HIPAA_Acknowledgement HIPAA Privacy Notice.pdf">HIPAA
+      Acknowledgement</a>
+    <a class="doc" target="_blank" href="/assets/pdf/GT PERM TO RELEASE RECEIVE INFO_2019.pdf">Permission to
+      Receive/Release Information</a>
   </div>
 </gt-container>
