--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -4,9 +4,11 @@
 
     <h2 class="section-heading font-effect-shadow-multiple">Services</h2>
 
-    <a mat-raised-button class="btn-ot page-scroll btn btn-xl font-effect-outline"
-      routerLink="/services/occupational-therapy">Occupational Therapy
-      Services</a>
+    <a mat-button class="btn-ot font-effect-outline" routerLink="/services/occupational-therapy">
+      <p>Now Providing Occupational Therapy
+        Services!</p>
+      <p><span class="click">Click Here</span> for More Info.</p>
+    </a>
 
     <div class="text-center">
 
