--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -26,7 +26,7 @@
   </a>
   <a class="link" routerLink="/forms">
     <mat-icon>attach_file</mat-icon>
-    <span class="label">Forms</span>
+    <span class="label">Documents</span>
   </a>
   <gt-social-icons></gt-social-icons>
 </nav>
