--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -27,3 +27,5 @@
     </a>
   </div>
 </mat-toolbar>
+<!-- <div id="navbar" [style.width.px]="windowWidth" [style.left.px]="offsetLeft">
+</div> -->
