--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -47,7 +47,6 @@
   .intro-lead-in {
     font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-style: italic;
-    float: right;
     font-size: 22px;
     color: #000;
     position: absolute;
@@ -102,32 +101,43 @@
 }
 
 @media screen and (max-width: 700px) {
-  .covid-link {
-    display: none;
-
-    .btn-label {}
-
-    mat-icon {}
-  }
 
   #inner-content {
     display: block;
 
+    .covid-link {
+      top: 10px;
+      left: 0px;
+      width: 100%;
+
+      .btn-label {
+        font-size: 14px;
+      }
+
+      mat-icon {
+        color: $primary-color;
+      }
+    }
+
+    .intro-lead-in {
+      top: 75px;
+      width: 100%;
+      font-size: 16px;
+      text-align: center;
+      left: 0;
+    }
+
     .intro-heading {
-      display: block;
-      width: 380px;
-      margin: 20px auto;
-      clear: both;
-      position: static;
-      margin-top: 100px;
+      top: 100px;
+      font-size: 48px;
     }
 
     gt-mission.card {
       display: block;
       width: 90%;
-      margin: 0px auto;
+      margin: 600px auto;
       clear: both;
-      position: static;
+      position: relative;
       height: auto;
       min-height: unset;
       overflow: visible;
