add testimonial for Whitney; covid daily reopening doc;

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,16 @@
 <gt-container [hasWallpaper]="true" backgroundImage="assets/blog-1.jpg">
   <div id="inner-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
     <div class="intro-lead-in font-effect-emboss">"Growing Confidence in Communication!"</div>
-    <a mat-button class="covid-link" href="/assets/COVID_Reopening June 2020.pdf">
+    <a mat-button class="covid-link" href="/assets/COVID_Reopening June 2020.pdf" target="_blank">
       <mat-icon class="font-effect-3d-float">info</mat-icon>
       <!-- <mat-icon class="font-effect-emboss">text_snippet</mat-icon> -->
       <span class="font-effect-outline btn-label">COVID Reopening June 2020</span>
       <!-- <mat-icon class="font-effect-emboss">priority_high</mat-icon> -->
+      <mat-icon class="font-effect-3d-float">info</mat-icon>
+    </a>
+    <a mat-button class="covid-link-2" href="/assets/pdf/COVID_DAILY SCREENING July 2020.pdf" target="_blank">
+      <mat-icon class="font-effect-3d-float">info</mat-icon>
+      <span class="font-effect-outline btn-label">COVID Daily Screening July 2020</span>
       <mat-icon class="font-effect-3d-float">info</mat-icon>
     </a>
     <!-- <button class="covid-link" (click)="openBottomSheet()">COVID Reopening June 2020</button> -->
