--- a/src/app/shared/container/container.component.html
+++ b/src/app/shared/container/container.component.html
@@ -1,13 +1,12 @@
-<gt-header [windowWidth]="contentWidth" [offsetLeft]="offsetLeft" [mobile]="mobile"></gt-header>
-<!-- <gt-navbar></gt-navbar> -->
-<gt-sidenav *ngIf="!mobile" [style.height.px]="sidenavHeight"></gt-sidenav>
+<!-- <gt-header [windowWidth]="contentWidth" [offsetLeft]="offsetLeft" [mobile]="mobile"></gt-header>
+<gt-sidenav *ngIf="!mobile" [style.height.px]="sidenavHeight"></gt-sidenav> -->
 
-<div id="content" class="scrollable" [style.height.px]="windowHeight" [style.width.px]="contentWidth" [style.left.px]="offsetLeft"
+<div id="content" class="scrollable" [style.height.px]="windowHeight" [style.width.px]="windowWidth" [style.left.px]="0"
   [style.background-image]="hasBackgroundImage ? 'url(' + backgroundImage + ')' : 'none'">
   <ng-content></ng-content>
-  <iu-wallpaper *ngIf="hasWallpaper" [images]="images" [imageOpacity]="0.6" [shuffle]="true" [offsetLeft]="offsetLeft"
-    [offsetTop]="64"></iu-wallpaper>
-  <button id="help" mat-fab *ngIf="showHelp" routerLink="/contact">
+  <iu-wallpaper *ngIf="hasWallpaper" [images]="images" [imageOpacity]="0.6" [shuffle]="true" [offsetLeft]="0"
+    [offsetTop]="0"></iu-wallpaper>
+  <!-- <button id="help" mat-fab *ngIf="showHelp" routerLink="/contact">
     <mat-icon aria-label="Email Us">help</mat-icon>
-  </button>
+  </button> -->
 </div>
