collage background image;

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <gt-container [hasWallpaper]="true" backgroundImage="assets/blog-1.jpg">
-  <!-- <div id="inner-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+  <div id="inner-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
     <div class="intro-lead-in font-effect-emboss">"Growing Confidence in Communication!"</div>
     <a mat-button class="covid-link" href="/assets/COVID_Reopening June 2020.pdf" target="_blank">
       <mat-icon class="font-effect-3d-float">info</mat-icon>
@@ -14,5 +14,5 @@
     <div class="intro-heading font-effect-3d-float">Welcome!</div>
     <gt-mission class="card"></gt-mission>
     <a mat-raised-button class="page-scroll btn btn-xl font-effect-outline" routerLink="/services">Tell Me More</a>
-  </div> -->
+  </div>
 </gt-container>
